初始化药师项目

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,22 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <style type="text/css">
+	  
+  *{
+	  margin: 0;
+	  padding:0;
+  }
+  	html,body{
+		 background: #f1f8ff;
+	}
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+	
   </body>
 </html>
